[tool.poetry]
name = "bgm38-tv"
version = "0.1.0"
description = ""
authors = ["Trim21 <trim21.me@gmail.com>"]
readme = "README.md"
packages = [{include = "bgm38"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "3.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
